# supabase_connector

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: .env.example
docs/: README.md
examples/: README.md  advanced_usage.py  basic_usage.py  database_setup.py  info_usage.py  services_usage.py
scripts/: test_new_structure.py  test_services.py
src/supabase_connector/: __init__.py  client.py  conversation.py  info.py  services.py  utils.py
tests/: __init__.py  test_client.py  test_conversation.py  test_info.py  test_integration.py
